--- a/package.json
+++ b/package.json
@@ -5,11 +5,32 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install",
+    "check-prettier": "prettier --check ./pages/* ./src/*",
+    "check-eslint": "eslint ./pages/* ./src/* --ext ts --ext tsx --ext js --ext jsx",
+    "use-prettier": "prettier --write ./pages/* ./src/*",
+    "check-all": "yarn run check-prettier && yarn run check-eslint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "clsx": "^1.1.1",
+    "formik": "^2.2.6",
     "next": "10.2.0",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6",
+    "yup": "^0.32.9",
+    "zustand": "^3.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.23.2",
+    "prettier": "^2.3.0",
+    "husky": "^6.0.0"
   }
 }
