--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "endOfLine": "lf",
   "singleQuote": true,
   "semi": false,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "printWidth": 135,
+  "tabWidth": 2
 }
