fix rendering breakpoints with zustand

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,17 +8,11 @@
       "@/components/*": ["./src/components/*"],
       "@/context/*": ["./src/context/*"],
       "@/hooks/*": ["./src/hooks/*"],
+      "@/stores/*": ["./src/stores/*"],
       "@/styles/*": ["./src/styles/*"],
       "@/utils/*": ["./src/utils/*"]
     }
   },
   // Notes : exlude artinya adalah folder/file yang tidak ingin di execute oleh jsconfig.json agar tidak menyebabkan "lambat"
-  "exclude": [
-    "node_modules",
-    "dist",
-    "bower_components",
-    "tmp",
-    "temp ",
-    "jspm_packages"
-  ]
+  "exclude": ["node_modules", "dist", "bower_components", "tmp", "temp ", "jspm_packages"]
 }
