--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "formik": "^2.2.6",
+    "formik-material-ui": "^3.0.1",
     "next": "10.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
@@ -30,7 +31,7 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
-    "prettier": "^2.3.0",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "prettier": "^2.3.0"
   }
 }
