init prisma setup and login/register integration with user.db dummy

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@prisma/client": "^2.22.1",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "formik": "^2.2.6",
@@ -32,6 +34,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "prisma": "^2.22.1"
   }
 }
