--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@prisma/client": "^2.22.1",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "clsx": "^1.1.1",
+    "cookies": "^0.8.0",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
