✨ new feature/components namely FieldUploadFile and FieldDatePicker

--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "check-all": "yarn run check-prettier && yarn run check-eslint"
   },
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@prisma/client": "^2.23.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "clsx": "^1.1.1",
     "cookies": "^0.8.0",
+    "date-fns": "^2.21.3",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
     "formik-material-ui-lab": "^0.0.8",
     "formik-material-ui-pickers": "^0.0.12",
     "jsonwebtoken": "^8.5.1",
+    "material-ui-dropzone": "^3.5.0",
     "next": "10.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
