--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "semi": false,
   "jsxSingleQuote": true,
   "printWidth": 125,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "arrowParens": "avoid",
+  "bracketSpacing": true
 }
